<resources>
    <string name="app_name">左邻右里</string>
    <string name="buttonBack">返 回</string>
    <string name="loginIn">登陆</string>
    <string name="build">注册</string>
    <string name="phoneNumber">手机号码</string>
    <string name="key">密码</string>
    <string name="makeSure">确定</string>
    <string name="rememberKey">记住密码</string>
    <string name="forget">忘记密码</string>
    <string name="makeSureKey">确认密码</string>
    <string name="inviteNumber">邀请码</string>
    <string name="submit">提交</string>
    <string name="forgetKeyText">找回密码</string>
    <string name="my_circle">我的邻里圈</string>
    <string name="haveBuild">已建邻里圈</string>
    <string name="main">首页</string>
    <string name="buildMyCircle">创建邻里圈</string>
    <string name="personal">个人中心</string>
    <string name="search">寻找邻里圈</string>
    <string name="send">发送</string>
    <string name="circleName">  圈  名  ：</string>
    <string name="circleIntroduce">圈介绍：</string>
    <string name="circleBuild">创建邻里圈</string>
    <string name="circle_have_build_dissolution">解散该圈</string>
</resources>
