<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topColor"
            android:padding="10dp"
            android:stretchColumns="1"
            >
        <TableRow>
            <Button
                    android:text="@string/buttonBack"
                    android:background="@drawable/topbutton"
                    android:id="@+id/interfaceMainBack"
                    android:layout_gravity="center"
                    android:textColor="@color/textColor"
                    android:layout_height="30dp"
            />
            <TextView
                    android:text="@string/loginIn"
                    android:id="@+id/interfaceMainText"
                    android:layout_gravity="center"
                    android:textSize="36dp"
                    android:textColor="@color/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
            <Button
                    android:text="@string/build"
                    android:background="@drawable/topbutton"
                    android:id="@+id/buildButton"
                    android:layout_gravity="center"
                    android:layout_height="30dp"
                    android:textColor="@color/textColor"

            />
        </TableRow>
    </TableLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/backGroundMainInterface"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:layout_gravity="center">
        <TextView
                android:id="@+id/numberText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/phoneNumber"
                android:layout_gravity="center"
                android:padding="20dp"
                android:textColor="@color/mainInterfaceTextColor"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:id="@+id/numberEdit"
                android:gravity="center"
                android:background="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/numberText"/>
        <TextView
                android:id="@+id/keyText"
                android:layout_below="@+id/numberEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/key"
                android:layout_gravity="center"
                android:padding="20dp"
                android:textColor="@color/mainInterfaceTextColor"/>
        <EditText
                android:layout_width="200dp"
                android:layout_height="30dp"
                android:inputType="textPassword"
                android:id="@+id/keyEdit"
                android:gravity="center"
                android:background="@color/white"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/keyText"/>

        <Button
                android:layout_marginTop="30dp"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/sureButton"
                android:text="@string/makeSure"
                android:background="@drawable/bg_alibuybutton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/keyEdit"/>
        <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_below="@+id/sureButton"
                android:layout_centerHorizontal="true"
                android:id="@+id/checkboxRemember"
                android:background="@drawable/bg_alibuybutton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/rememberKey"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:id="@+id/forgetKey"
                android:text="@string/forget"
                android:background="@drawable/bg_alibuybutton"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_below="@+id/checkboxRemember"
                android:layout_alignParentRight="true"/>
    </RelativeLayout>

</LinearLayout>