<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              >
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/topColor"
            android:padding="10dp"
            android:stretchColumns="1"
    >
        <TableRow>
            <Button
                    android:text="@string/buttonBack"
                    android:background="@drawable/topbutton"
                    android:id="@+id/registerBack"
                    android:layout_gravity="center"
                    android:textColor="@color/textColor"
                    android:layout_height="30dp"

            />
            <TextView
                    android:text="@string/build"
                    android:id="@+id/registerText"
                    android:layout_gravity="center"
                    android:textSize="36dp"
                    android:textColor="@color/textColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
            />
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="    "
                    android:paddingLeft="70dp"
                    android:layout_gravity="center"
            />
        </TableRow>
    </TableLayout>
    <LinearLayout
            android:orientation="vertical"
            android:background="@color/backGroundMainInterface"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/phoneNumber"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="200dp"
                android:id="@+id/numberRegister"
                android:gravity="center"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_height="30dp"/>
        <TextView
                android:text="@string/key"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="200dp"
                android:id="@+id/keyRegister"
                android:gravity="center"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_height="30dp"/>
        <TextView
                android:text="@string/makeSureKey"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="200dp"
                android:id="@+id/keySureRegister"
                android:gravity="center"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_height="30dp"/>
        <TextView
                android:text="@string/inviteNumber"
                android:layout_gravity="center"
                android:padding="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        <EditText
                android:layout_width="200dp"
                android:id="@+id/inviteKey"
                android:gravity="center"
                android:background="@color/white"
                android:layout_gravity="center"
                android:layout_height="30dp"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:id="@+id/submit"
                android:layout_gravity="center"
                android:text="@string/submit"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_alibuybutton"/>
    </LinearLayout>
</LinearLayout>