<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/buildTop"
            android:background="@color/topColor"
            android:padding="10dp"
            android:stretchColumns="1">
        <TableRow>
            <RelativeLayout>
                <ImageButton
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:background="#00000000"
                        android:layout_marginLeft="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/black"
                        android:id="@+id/build_back"
                        android:layout_alignParentEnd="true"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:text="@string/buttonBack"
                        android:layout_below="@+id/build_back" android:layout_alignStart="@+id/build_back"/>
            </RelativeLayout>
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="26dp"
                    android:layout_weight="3"
                    android:textColor="@color/white"
                    android:text="@string/circleBuild"/>
            <RelativeLayout
                    android:layout_gravity="center">
                <ImageButton
                        android:layout_width="28dp"
                        android:layout_height="28dp"
                        android:background="#00000000"
                        android:id="@+id/haveBuild"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:layout_marginRight="10dp"
                        android:layout_gravity="center"
                        android:src="@drawable/buildtop2"
                        android:layout_alignParentTop="true"
                        android:layout_centerHorizontal="true"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/haveBuild"
                        android:textSize="10dp"
                        android:gravity="center"
                        android:layout_below="@+id/haveBuild"/>
            </RelativeLayout>
        </TableRow>
    </TableLayout>
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_below="@+id/buildTop"
            android:background="@color/buildIntroduce"
            android:padding="10dp"
            android:layout_height="250dp" android:layout_marginLeft="10dp" android:layout_marginRight="10dp"
            android:layout_marginTop="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/circleName"
                android:id="@+id/buildName"
                android:layout_alignBaseline="@+id/build_name"
                android:layout_alignBottom="@+id/build_name"
                android:layout_toStartOf="@+id/build_introduce"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:layout_toRightOf="@+id/buildName"
                android:id="@+id/build_name"
                android:textIsSelectable="false"/>
        <TextView
                android:layout_width="wrap_content"
                android:text="@string/circleIntroduce"
                android:layout_height="wrap_content"
                android:id="@+id/introduce" android:layout_below="@+id/build_name"
                android:layout_alignParentStart="true"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:textSize="15dp"
                android:gravity="top"
                android:minLines="5"
                android:layout_below="@+id/build_name"
                android:layout_toEndOf="@+id/introduce"
                android:id="@+id/build_introduce"/>
    </RelativeLayout>
    <Button
            android:id="@+id/build_sure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/makeSure"
            android:padding="15dp"
            android:background="@drawable/buildmycirclebuttom"
            android:layout_alignParentBottom="true"/>
</RelativeLayout>